0.02
 - Add minimum version of Perl.
 - Add tests for constructor.

0.01 2014-08-04T23:49:35+02:00
 - First version.