@@ -20,3 +20,4 @@ t/Random-Set/01-version.t
 t/Random-Set/02-pod_coverage.t
 t/Random-Set/03-pod.t
 t/Random-Set/04-new.t
+t/Random-Set/05-get.t
