@@ -1,6 +1,5 @@
 TODO
 ====
-2. Pridat testy.
 3. Udelat test nahody s vystupem do grafu.
 4. Je preciznost k necemu?
 5.
@@ -10,3 +9,6 @@ Applied
 1. Trida, ve ktere definuji pravdepodobnost a k tomu hodnotu. Celkove zadam celou
    pravdepodobnostni mnozinu a system vrati hodnotu.
 OK [20130920] skim
+
+2. Pridat testy.
+OK [20140813] skim
