@@ -1,6 +1,7 @@
 0.02
  - Add minimum version of Perl.
  - Add tests for constructor.
+ - Add tests for get() method.
 
 0.01 2014-08-04T23:49:35+02:00
  - First version.
